# crypto-predictor

./: .pre-commit-config.yaml  README.md  pyproject.toml
docker-compose/: Makefile  redpanda.yml  technical-indicators-pipeline.yml
services/candles/: .env.example  Makefile  README.md  config.py  pyproject.toml  run.py
services/technical-indicators/: .env.example  Dockerfile  Makefile  README.md  candle.py  config.py  pyproject.toml  run.py  technical_indicators.py
services/to-feature-store/: .env.example  Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.py  sinks.py
services/trades/: .env.example  Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.py
services/trades/kraken_api/: mock.py  trade.py  websocket.py
services/trades/src/: kraken_api.py
