[project]
name = "trades"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.2",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "quixstreams>=3.3.0",
    "websocket-client>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]
